// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base/Member/Modal/MemberGroupForm should match snapshot when isUpdate is falsy 1`] = `
<body>
  <div />
  <div>
    <form
      class="ant-form ant-form-vertical"
    >
      <div
        class="ant-form-item"
      >
        <div
          class="ant-row ant-form-item-row"
        >
          <div
            class="ant-col ant-form-item-label"
          >
            <label
              class="ant-form-item-required"
              for="name"
              title="成员组名"
            >
              成员组名
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <input
                  aria-required="true"
                  class="ant-input basic-input-wrapper css-1pd1cd5"
                  id="name"
                  placeholder="请输入成员组名"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item"
      >
        <div
          class="ant-row ant-form-item-row"
        >
          <div
            class="ant-col ant-form-item-label"
          >
            <label
              class="ant-form-item-required"
              for="userUids"
              title="用户名"
            >
              用户名
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <div
                  aria-required="true"
                  class="ant-select ant-select-in-form-item basic-select-wrapper css-iy4o4x ant-select-multiple ant-select-show-arrow ant-select-loading ant-select-show-search"
                >
                  <div
                    class="ant-select-selector"
                  >
                    <div
                      class="ant-select-selection-overflow"
                    >
                      <div
                        class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
                        style="opacity: 1;"
                      >
                        <div
                          class="ant-select-selection-search"
                          style="width: 0px;"
                        >
                          <input
                            aria-activedescendant="userUids_list_0"
                            aria-autocomplete="list"
                            aria-controls="userUids_list"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-owns="userUids_list"
                            aria-required="true"
                            autocomplete="off"
                            class="ant-select-selection-search-input"
                            id="userUids"
                            readonly=""
                            role="combobox"
                            style="opacity: 0;"
                            type="search"
                            unselectable="on"
                            value=""
                          />
                          <span
                            aria-hidden="true"
                            class="ant-select-selection-search-mirror"
                          >
                             
                          </span>
                        </div>
                      </div>
                    </div>
                    <span
                      class="ant-select-selection-placeholder"
                    >
                      请选择用户名
                    </span>
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-arrow ant-select-arrow-loading"
                    style="user-select: none;"
                    unselectable="on"
                  >
                    <span
                      aria-label="loading"
                      class="anticon anticon-loading anticon-spin"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="loading"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="0 0 1024 1024"
                        width="1em"
                      >
                        <path
                          d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item"
      >
        <div
          class="ant-row ant-form-item-row"
        >
          <div
            class="ant-col ant-form-item-label"
          >
            <label
              class=""
              for="isProjectAdmin"
              title="项目管理员"
            >
              项目管理员
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <button
                  aria-checked="false"
                  class="ant-switch basic-switch-wrapper css-g6dhbn"
                  id="isProjectAdmin"
                  role="switch"
                  type="button"
                >
                  <div
                    class="ant-switch-handle"
                  />
                  <span
                    class="ant-switch-inner"
                  >
                    <span
                      class="ant-switch-inner-checked"
                    />
                    <span
                      class="ant-switch-inner-unchecked"
                    />
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item"
      >
        <div
          class="ant-row ant-form-item-row"
        >
          <div
            class="ant-col ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <button
                  class="ant-btn ant-btn-default member-form-add-button basic-button-wrapper css-1719g3l"
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <svg
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M7 13.667A6.667 6.667 0 1 1 7 .334a6.667 6.667 0 0 1 0 13.333m-.667-7.334H3.668v1.334h2.667v2.666h1.333V7.667h2.667V6.333H7.667V3.667H6.334z"
                        fill="#4583FF"
                      />
                    </svg>
                  </span>
                  <span>
                    添加平台角色与操作范围
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</body>
`;

exports[`base/Member/Modal/MemberGroupForm should match snapshot when isUpdate is truthy 1`] = `
<body>
  <div />
  <div>
    <form
      class="ant-form ant-form-vertical"
    >
      <div
        class="ant-form-item"
      >
        <div
          class="ant-row ant-form-item-row"
        >
          <div
            class="ant-col ant-form-item-label"
          >
            <label
              class="ant-form-item-required"
              for="name"
              title="成员组名"
            >
              成员组名
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <input
                  aria-required="true"
                  class="ant-input ant-input-disabled basic-input-wrapper css-1pd1cd5"
                  disabled=""
                  id="name"
                  placeholder="请输入成员组名"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item"
      >
        <div
          class="ant-row ant-form-item-row"
        >
          <div
            class="ant-col ant-form-item-label"
          >
            <label
              class="ant-form-item-required"
              for="userUids"
              title="用户名"
            >
              用户名
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <div
                  aria-required="true"
                  class="ant-select ant-select-in-form-item basic-select-wrapper css-iy4o4x ant-select-multiple ant-select-show-arrow ant-select-loading ant-select-show-search"
                >
                  <div
                    class="ant-select-selector"
                  >
                    <div
                      class="ant-select-selection-overflow"
                    >
                      <div
                        class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
                        style="opacity: 1;"
                      >
                        <div
                          class="ant-select-selection-search"
                          style="width: 0px;"
                        >
                          <input
                            aria-activedescendant="userUids_list_0"
                            aria-autocomplete="list"
                            aria-controls="userUids_list"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-owns="userUids_list"
                            aria-required="true"
                            autocomplete="off"
                            class="ant-select-selection-search-input"
                            id="userUids"
                            readonly=""
                            role="combobox"
                            style="opacity: 0;"
                            type="search"
                            unselectable="on"
                            value=""
                          />
                          <span
                            aria-hidden="true"
                            class="ant-select-selection-search-mirror"
                          >
                             
                          </span>
                        </div>
                      </div>
                    </div>
                    <span
                      class="ant-select-selection-placeholder"
                    >
                      请选择用户名
                    </span>
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-arrow ant-select-arrow-loading"
                    style="user-select: none;"
                    unselectable="on"
                  >
                    <span
                      aria-label="loading"
                      class="anticon anticon-loading anticon-spin"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="loading"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="0 0 1024 1024"
                        width="1em"
                      >
                        <path
                          d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item"
      >
        <div
          class="ant-row ant-form-item-row"
        >
          <div
            class="ant-col ant-form-item-label"
          >
            <label
              class=""
              for="isProjectAdmin"
              title="项目管理员"
            >
              项目管理员
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <button
                  aria-checked="false"
                  class="ant-switch basic-switch-wrapper css-g6dhbn"
                  id="isProjectAdmin"
                  role="switch"
                  type="button"
                >
                  <div
                    class="ant-switch-handle"
                  />
                  <span
                    class="ant-switch-inner"
                  >
                    <span
                      class="ant-switch-inner-checked"
                    />
                    <span
                      class="ant-switch-inner-unchecked"
                    />
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item"
      >
        <div
          class="ant-row ant-form-item-row"
        >
          <div
            class="ant-col ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <button
                  class="ant-btn ant-btn-default member-form-add-button basic-button-wrapper css-1719g3l"
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <svg
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M7 13.667A6.667 6.667 0 1 1 7 .334a6.667 6.667 0 0 1 0 13.333m-.667-7.334H3.668v1.334h2.667v2.666h1.333V7.667h2.667V6.333H7.667V3.667H6.334z"
                        fill="#4583FF"
                      />
                    </svg>
                  </span>
                  <span>
                    添加平台角色与操作范围
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</body>
`;
